--- a/templates/fourth_task/registration_page.html
+++ b/templates/fourth_task/registration_page.html
@@ -34,7 +34,8 @@
 
     <!-- Кнопка для возврата в магазин -->
     <a href="{% url 'menu_game' %}">
-        <button type="button">Вернуться в магазин</button>
+        <!-- Кнопка для возврата в магазин -->
+    <a href="{% url 'menu_game' %}" class="button" style="margin: 40%;">Вернуться в магазин</a>
     </a>
 </body>
 </html>
