--- a/templates/fourth_task/menu.html
+++ b/templates/fourth_task/menu.html
@@ -4,16 +4,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Для адаптивности -->
 
     <title>{% block page_title %}My Site{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-
+    <!-- Подключение Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>{% block pagename %}Добро пожаловать на мой сайт{% endblock %}</h1>
-
-
     </header>
     <nav>
         {% block menu %}
@@ -21,19 +21,21 @@
         <p><a href="http://127.0.0.1:8000/platform/games">Магазин</a></p>
         <p><a href="http://127.0.0.1:8000/platform/cart">Корзина</a></p>
         <p><a href="http://127.0.0.1:8000/django_sign_up" class="register-button">Регистрация</a></p> <!-- Кнопка регистрации -->
-
         {% endblock %}
     </nav>
 
     <main>
         {% block content %}
         <p>Здесь будет основной контент страницы.</p>
-
-
-
-
         {% endblock %}
     </main>
-    © 2024, Интернет-магазин
+
+    <!-- Подключение Bootstrap JS и Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+
+    <footer>
+        © 2024, Интернет-магазин
+    </footer>
 </body>
 </html>
